<resources>
    <string name="app_name">CrowingRooster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu">Menú principal</string>
    <string name="more_options">Más opciones</string>
    <string name="more_options_desc">Más opciones de usuario</string>
    <string name="successful_sales">Ventas exitosas</string>
    <string name="successful_orders">Exitosos</string>
    <string name="ongoing_orders">Pendientes</string>
    <string name="canceled_orders">Cancelados</string>
    <string name="battery_search">Catálogo de Baterías</string>
    <string name="search">Búsqueda</string>
    <string name="car_search">Por Carro</string>

    <string name="login">ingresar</string>
    <string name="navigation_drawer_content_desc">Content description for the image that is shown at the top of the navigation drawer.</string>
    <string name="navigation_drawer_header_title">Crowing Rooster</string>

    <string name="sales">Ventas</string>
    <string name="clients">Clientes</string>
    <string name="orders">Pedidos</string>
    <string name="profile">Perfil</string>
    <string name="chat">Chat</string>
    <string name="img_button_content_desc">Content description for the image that is shown on the ImageButton.</string>
    <string name="change_password">cambiar contraseña</string>
    <string name="edit">editar</string>
    <string name="name">Nombre</string>
    <string name="code">codigo</string>
    <string name="telephone">Teléfono</string>
    <string name="email">Correo</string>
    <string name="title">titulo</string>
    <string name="model">Modelo</string>
    <string name="client">Cliente</string>
    <string name="quantity">Cantidad: </string>
    <string name="payment">Pago</string>
    <string name="cash">Efectivo</string>
    <string name="price">Precio</string>
    <string name="sample_infobat">Las baterias Rasho, con su rasho de poder te dan un rasho que nunca esperarias del rayasho supremo. Vienen con tres polaridadeds y soportan hasta modelos de gran capacidad Rasho UWU</string>
    <string name="rashoTitulosample">Rasho Baterias RASHO UWU</string>
    <string name="Product_title">Rasho Batearias Rasho</string>
    <string name="AddTocharText">Agregar Al Carrito</string>
    <string name="sale_details">Detalles de venta</string>
    <string name="date">Fecha</string>
    <string name="product">Producto</string>
    <string name="close">Cerrar</string>
    <string name="quality">Calidad</string>
    <string name="Estilos">Estilos</string>
    <string name="Text_polaridad">Tipo de Polaridad:</string>
    <string name="Advertencia_polaridad">(Si no buscas un tipo de polaridad fuera del normal te recomendamos no tocar esta opción)</string>
    <string name="positiv_izqtext">Positivo a la Izquierda</string>
    <string name="positivo_dertext">Positivo a la derecha</string>
    <string name="TipoBateria_text">"Tipo de Bateria: "</string>
    <string name="buscar_text">BUSCAR</string>
    <string name="Premium_text">Premium</string>
    <string name="Silver_btn">Silver</string>
    <string name="Bronze_btn">Bronze</string>
    <string name="ongoing_sales">Ventas pendientes</string>
    <string name="seller">Vendedor</string>
    <string name="CCA">CCA (EN):</string>
    <string name="capacidad">Capacidad (Ah):</string>
    <string name="modelo_name">Modelo:</string>
    <string name="voltaje">Voltaje (V):</string>


    <string name="order_details">Detalles del pedido</string>
    <string name="call">llamar</string>
    <string name="confirm">confirmar</string>
    <string name="polarity">Polaridad</string>
    <string name="home">Home</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="cancel">cancelar</string>
    <string name="password">Contraseña</string>
    <string name="forgotten_pass"><u>¿Has olvidado la contraseña?</u></string>
    <string name="not_yet_registered">¿No te has registrado aún?</string>
    <string name="user_or_email">Usuario/Correo</string>
    <string name="details">Detalles</string>
    <string name="num_orden">"Numero de Orden"</string>

    <string name="ProeedPayment">Proceder Con el Pedido</string>
    <string name="quantitydefault">1</string>
    <string name="message">mensaje</string>
    <string name="logoff">Cerrar sesión</string>
    <string name="search_by_battery">Catálogo de Baterías</string>
    <string name="order_by_order">Ordenar por número de orden</string>

    <string name="defaultnamechat">Christiano Fatimo Contreras</string>
    <string name="defaultmssgeText">amo la idea de que sea por mayoreo</string>

    <string name="hour">Hora</string>
    <string name="order_by_date">Ordernar por fecha</string>
    <string name="order_by_client">Ordenar por cliente</string>
    <string name="order_by_quantity">Ordenar por cantidad</string>
    <string name="descendent">Descendente</string>
    <string name="ascendent">Ascendente</string>
    <string name="total_quantity_battery">Cantidad total de baterias:</string>
    <string name="total">total</string>
    <string name="catalogo">Catalogo</string>
    <string name="Producto">Producto</string>
    <string name="chart">Carrito De Compras</string>
    <string name="EnterMssge_text">Enter Message</string>
    <string name="send_text">Send</string>
    <string name="company">Compañía</string>
    <string name="show_battery_format">%1$s-%2$s-%3$s</string>
    <string name="Estilosproducto">Estilos Disponibles</string>

    <string name="address">Dirección</string>
    <string name="already_account">¿Ya tienes una cuenta?</string>
    <string name="select_photo">Seleccionar foto</string>
    <string name="username">Username</string>
    <string name="registrar">Registrar</string>
    <string name="dui">Dui</string>
    <string name="phone">Teléfono</string>
    <string name="companies">Compañías</string>
    <string name="Dimensions">Dim (cmxcmxcm):</string>
    <string name="state">Estado</string>
    <string name="delivery_address">Dirección de entrega</string>
    <string name="delivery">Entrega</string>
    <string name="deliverydetails">Detalles de la entrega</string>


    <string-array name="payment_array">
        <item>Efectivo</item>
        <item>Tarjeta</item>
    </string-array>
    <string-array name="ArrayEstilos">
        <item>Standard</item>
        <item>Premium</item>
    </string-array>

</resources>
