<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--TODO: Enable this navigation when the appropriate fragments are created   -->

    <item
        android:id="@+id/sellerMainScreen"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/sellerProfileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/salesFragment"
        android:icon="@drawable/ic_sales_black_filled_512dp"
        android:title="@string/sales"/>
    <item
        android:id="@+id/sellerClientListFragment"
        android:icon="@drawable/ic_client_black_filled_512dp"
        android:title="@string/clients"/>
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat_black_filled_512dp"
        android:title="@string/chat"/>
    <item
        android:id="@+id/logInFragment"
        android:icon="@drawable/ic_logoff_black_24dp"
        android:title="@string/logoff"/>

</menu>