<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SaleDetailsDialogFragment"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/client_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary"
                    android:padding="@dimen/small_padding"
                    android:text="@string/client"
                    android:textAllCaps="true"
                    android:textColor="@color/on_secondary"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/client_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/client_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Luis Manuel Calderón Perla"
                        android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ungallocontenis@gmail.com"
                        android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/details_sale_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary"
                    android:padding="@dimen/small_padding"
                    android:text="@string/order_details"
                    android:textAllCaps="true"
                    android:textColor="@color/on_secondary"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/model_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/model_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="22FF-330"
                        android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantity_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantity_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="5000"
                        android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quality_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quality"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quality_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Premium_text"
                    android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/polarity_til"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/polarity"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/polarity_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Izquierda"
                        android:textColor="@color/on_primary"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center">
            
            <Button
                android:id="@+id/char_btt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                app:strokeColor="@color/secondary_light"
                android:textColor="@color/secondary_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />

            <Button
                android:id="@+id/confirm_btt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:strokeColor="@color/secondary_light"
                android:textColor="@color/secondary_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />

            <Button
                android:id="@+id/call_btt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                app:strokeColor="@color/secondary_light"
                android:textColor="@color/secondary_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

</layout>