<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        tools:context=".screens.product.ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/ProductTitleText"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Product_title"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/product_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="150dp"
            android:layout_height="131dp"
            app:layout_constraintBottom_toTopOf="@+id/Estilos"

            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProductTitleText"
            app:srcCompat="@drawable/ic_rooster_colored_512dp" />

        <TextView
            android:id="@+id/description_product"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sample_infobat"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toTopOf="@+id/AddTochart_buttom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.264"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Estilos" />

        <Button
            android:id="@+id/AddTochart_buttom"
            style="@style/Widget.MyApp.MyButton"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/AddTocharText"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_product" />


        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/Estilos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toTopOf="@+id/description_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_img"
            app:smsp_alwaysShowFloatingLabel="true"
            app:smsp_arrowColor="@color/secondary"
            app:smsp_floatingLabelColor="@color/secondary"
            app:smsp_floatingLabelText="@string/payment"
            app:smsp_hint="@string/Estilosproducto"
            app:smsp_hintColor="@color/on_primary"
            app:smsp_itemColor="@color/on_primary"
            app:smsp_itemListBackgroundColor="@color/primary_light"
            app:smsp_itemListColor="@color/on_primary"
            app:smsp_itemListHintBackgroundColor="@color/secondary"
            app:smsp_itemListHintColor="@color/on_primary"
            app:smsp_selectedItemListColor="@color/secondary_light"
            app:smsp_underlineColor="@color/secondary" />




        <!--        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner-->
<!--            android:id="@+id/Estilos"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:smsp_errorText="This is error text. You can show it as single line or multiple lines using attr smsp_multilineError"-->
<!--            app:smsp_floatingLabelColor="#1976D2"-->
<!--            app:smsp_floatingLabelText="Floating Label Text"-->
<!--            app:smsp_hint="Hint Text"-->
<!--            app:smsp_hintColor="#388E3C"-->
<!--            app:smsp_itemColor="#512DA8"-->
<!--            app:smsp_itemListColor="#7C4DFF"-->
<!--            app:smsp_itemListHintBackgroundColor="#808080"-->
<!--            app:smsp_itemListHintColor="#FFFFFF"-->
<!--            app:smsp_multilineError="false"-->
<!--            app:smsp_selectedItemListColor="#FF5252"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/description_product"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/product_img" />-->


<!--        <Button-->
<!--            android:id="@+id/Estilos"-->
<!--            style="@style/Widget.MyApp.MyButton"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="45dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:fontFamily="@font/montserrat"-->
<!--            android:text="@string/Estilos"-->
<!--            android:textColor="@color/on_primary"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/description_product"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/product_img" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>